Fix reset password api

--- a/templates/main/password/password_rest_temp.html
+++ b/templates/main/password/password_rest_temp.html
@@ -10,9 +10,9 @@
 
     <title>Nebig | نبیگ</title>
   </head>
-  <body style="width: 600px; margin:0 auto;">
+  <body dir='rtl' style="width: 600px; margin:0 auto;">
     <div class="container" style="background-color: #f5f5f5; border-radius: 10px; padding: 5px; margin-top: 50px;">
-      <main dir='rtl' class="container" style="font-family: 'B Nazanin'; font-size: 16px; color: #2D3074; background-color: #F5F5F5;">
+      <main class="container" style="font-family: 'B Nazanin'; font-size: 16px; color: #2D3074; background-color: #F5F5F5;">
           <div class="container-sm">
             <p dir='rtl'>
               سلام،
